# stm32-firmware-integrity

./: .gitignore  CMakeLists.txt
cmake/: cpm-mbedtls.cmake  cpm.cmake  mbedtls_config.h  toolchain.cmake  toolchain_compiler.cmake  toolchain_machine.cmake  toolchain_machine_arm_cm4f.cmake  toolchain_machine_x86.cmake  toolchain_nucleo_8mhz.cmake  toolchain_pc.cmake
dbg/: gcc_debug_nucleo.jdebug
src_app/: CMakeLists.txt  led.c  led.h  main.c
src_app/config/: config_rcc.c  config_rcc.h  config_uart.c
src_boot/: CMakeLists.txt  main.c
src_boot/config/: config_uart.h
